--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "scripts": {
-    "start": "webpack serve --mode development",
-    "build" : "webpack build"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^9.1.0",
-    "css-loader": "^6.7.2",
-    "html-webpack-plugin": "^5.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "dependencies": {
-    "pdf-merger-js": "^4.1.2"
-  }
+    "scripts": {
+        "start": "webpack serve --mode development",
+        "start:gitpod": "webpack serve --mode development --allowed-hosts all --client-web-socket-url ws://0.0.0.0:0/ws",
+        "build": "webpack build",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix",
+        "prettier": "prettier --write ."
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.2",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
+        "babel-loader": "^9.1.0",
+        "css-loader": "^6.7.2",
+        "eslint": "^8.27.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.5.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.31.10",
+        "html-webpack-plugin": "^5.5.0",
+        "prettier": "^2.7.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.11.1"
+    },
+    "dependencies": {
+        "pdf-merger-js": "^4.1.2"
+    }
 }
