--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "eslint-plugin-n": "^15.5.1",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.31.10",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
         "prettier": "^2.7.1",
         "react": "^18.2.0",
